# calc

./: $  .gitignore  CHANGELOG  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  README.md  a.out  artifacts.json  flake.nix  index.html  mini-calc-installer.sh.txt  oranda.json  test.c
.github/workflows/: coverage.yml  jekyll-gh-pages.yml  jekyll.yml  rust-test.yml  rust.yml  web.yml
artifacts/: index.html
book/: config.html  function.html  index.html  logic.html  math.html  print.html  searchindex.js  searchindex.json  usage.html
changelog/: index.html
changelog/2.0.0/: index.html
changelog/2.1.0/: index.html
changelog/2.1.1/: index.html
changelog/2.10.0/: index.html
changelog/2.11.0/: index.html
changelog/2.11.1/: index.html
changelog/2.11.2/: index.html
changelog/2.11.3/: index.html
changelog/2.11.4/: index.html
changelog/2.11.5/: index.html
changelog/2.11.6/: index.html
changelog/2.12.2/: index.html
changelog/2.2.2/: index.html
changelog/2.3.0/: index.html
changelog/2.3.1/: index.html
changelog/2.4.0/: index.html
changelog/2.5.0/: index.html
changelog/2.5.1/: index.html
changelog/2.6.0/: index.html
changelog/2.7.0/: index.html
changelog/2.8.0/: index.html
changelog/2.8.1/: index.html
changelog/2.9.0/: index.html
changelog/2.9.1/: index.html
changelog/2.9.10/: index.html
changelog/2.9.2/: index.html
changelog/2.9.3/: index.html
changelog/2.9.4/: index.html
changelog/2.9.6/: index.html
changelog/2.9.8/: index.html
changelog/2.9.9/: index.html
docs/: _config.yml  config.md  function.md  index.md  logic.md  plot.md  usage.md
manual/: assets  main.typ  makefile
manual/public/: index.html
mini-calc/: book.toml
mini-calc/book/: config.html  function.html  logic.html  math.html  plot.html  print.html  searchindex.js  searchindex.json  usage.html
mini-calc/docs/: function.html
mini-calc/public/: index.html
mini-calc/src/: SUMMARY.md  config.md  function.md  index.md  logic.md  math.md  plot.md  usage.md
public/: artifacts.json  changelog.rss  index.html  mini-calc-installer.sh.txt  oranda-v0.6.0.css
public/artifacts/: index.html
public/book/: 404.html  function.html  index.html  math.html  plot.html  (+3 more)
src/: lexer.rs  main.rs  token.rs
(+63 files in other folders)
