[package]
name = "mini-calc"
version = "2.8.0"
license = "GPL-3.0-or-later"
description = "A fully-featured minimalistic configurable rust calculator"
homepage = "https://calc.nwa2coco.fr"
repository = "https://github.com/coco33920/calc"
readme = "README.md"
edition = "2021"
exclude = [
    "assets/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
linefeed = "0.6"
confy = "0.5.1"
serde = { version = "1.0.192", features = ["derive"] }
